--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.2.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
+    "three": "^0.141.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
