--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.0",
+    "mathjs": "^10.6.1",
+    "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "three": "^0.141.0",
@@ -38,6 +40,8 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.4.1",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "typescript": "~4.5.5"
   }
 }
