--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@types/nprogress": "^0.2.0",
+    "@wangeditor/editor": "^5.1.1",
+    "@wangeditor/editor-for-vue": "^5.1.11",
     "ant-design-vue": "^3.2.3",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.2",
     "element-plus": "^2.2.0",
     "mathjs": "^10.6.1",
     "mitt": "^3.0.0",
@@ -20,7 +24,9 @@
     "three": "^0.141.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vxe-table": "^4.2.6",
+    "xe-utils": "^3.5.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
